# HelloJNISLES

./: .gitignore  README.md  local.properties  make_sf_headers.sh
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_buffer_ring.c  audio_buffer_ring.h  hello-jni.c  sf1.h  sf2.h  sf3.h  sles_simple_audio.c
app/src/main/java/com/example/hellojni/: HelloJni.java
